--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
+torch==2.0.1
+tokenizers==0.14.0
+transformers==4.35.0
+accelerate==0.24.1
+attrdict
 tqdm
-datasets==3.0.1
+deepspeed==0.12.2
+datasets
+tensorboardX
 wandb
-transformers==4.45.0
 codebleu
 tree-sitter-python==0.21
 vllm
